fixed spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5770,14 +5770,13 @@ h3 {
     line-height: 40px;
     text-align: center;
     border-radius: 20px;
-    background: #3498db;
+
     font-size: 14px;
 }
 .social-links li.facebook a {
-    background: #3b5998;
 }
-.social-links li.twitter a {
-    background: #00aced;
+.twitter {
+    list-style-type: none;
 }
 .social-links li.google-plus a {
     background: #dd4b39;
